--- a/manuscript/refs.bib
+++ b/manuscript/refs.bib
@@ -103,3 +103,45 @@ Citation Key: dennett{\_}modelling{\_}2018},
 	note = {Publisher: Taylor & Francis
 {\_}eprint: https://doi.org/10.1080/24694452.2020.1806028}
 }
+
+@article{rowe2021,
+	title = {Big Data and Human Geography},
+	author = {Rowe, Francisco},
+	year = {2021},
+	month = {10},
+	date = {2021-10-10},
+	journal = {SocArXiv Papers},
+	url = {http://dx.doi.org/10.31235/osf.io/phz3e}
+}
+
+@article{Reuters2022,
+author = {Scarr, Simon  and
+Katakam, Anand and Gopalakrishnan, Raju},
+title = {{Pakistan floods. Submerged Cities}},
+journal = {Reuters},
+url = {https://graphics.reuters.com/PAKISTAN-WEATHER/FLOODS/zgvomodervd/index.html?utm_medium=Social&utm_source=twitter},
+urldate = {2022-09-23},
+year = {2022},
+note = "[online; accessed 23-August-2022]"
+}
+
+
+@article{bbc2022,
+author = {Fihlani, Pumza},
+title = {{Pakistan floods: Dengue cases soaring after record monsoon}},
+journal = {BBC News},
+url = {https://www.bbc.co.uk/news/world-asia-62907449},
+urldate = {2022-09-15},
+year = {2022},
+note = "[online; accessed 23-August-2022]"
+}
+@inbook{green2021,
+	title = {New Forms of Data and New Forms of Opportunities to Monitor and Tackle a Pandemic},
+	author = {Green, Mark and Pollock, Frances Darlington and Rowe, Francisco},
+	year = {2021},
+	date = {2021},
+	publisher = {Springer International Publishing},
+	pages = {423--429},
+	doi = {10.1007/978-3-030-70179-6_56},
+	url = {http://dx.doi.org/10.1007/978-3-030-70179-6_56}
+}
