--- a/manuscript/template.tex
+++ b/manuscript/template.tex
@@ -49,15 +49,15 @@
 % configure pdf metadata and link handling
 \hypersetup{
 	pdfauthor={Francisco Rowe},
-	pdftitle={Title},
-	pdfsubject={Title},
-	pdfkeywords={Keywords},
+	pdftitle={Using Digital Footprint Data to Monitor Human Mobility For Supporting Rapid Humanitarian Responses},
+	pdfsubject={Using Digital Footprint Data to Monitor Human Mobility For Supporting Rapid Humanitarian Responses},
+	pdfkeywords={Digital footprint data, Human mobility, Population displacement, Flooding, Pakistan, Geographic data science},
 	pdffitwindow=true,
 	breaklinks=true,
 	colorlinks=false,
 	pdfborder={0 0 0}}
 
-\title{Title\footnote{\textbf{Citation}: Rowe, F., [year]. Title}}
+\title{Using Digital Footprint Data to Monitor Human Mobility For Supporting Rapid Humanitarian Responses\footnote{\textbf{Citation}: Rowe, F., 2022. Using Digital Footprint Data to Monitor Human Mobility For Supporting Rapid Humanitarian Responses}}
 \author[1]{Francisco Rowe \thanks{\textit{Corresponding author}: F.Rowe-Gonzalez@liverpool.ac.uk}}
 \affil[1]{Geographic Data Science Lab, Department of Geography and Planning, University of Liverpool, Liverpool, United Kingdom}
 
