complete draft for submission

--- a/manuscript/refs.bib
+++ b/manuscript/refs.bib
@@ -1,3 +1,17 @@
+@article{aminetzahetal_2022,
+  title={A reflection on global food security challenges amid the war in Ukraine and the early impact of climate change},
+  author={Aminetzah, Daniel and
+Baroyan, Artem and 
+Denis, Nicolas and
+Dewilde, Sarah and 
+Ferreira, Nelson andKravchenko, Oleksandr and
+Revellat, Julien and
+Verlan, Ivan},
+  journal={McKinsey & Company},
+  pages={1--10},
+  year={2022}
+}
+
 @article{mullainathan2017machine,
   title={Machine learning: an applied econometric approach},
   author={Mullainathan, Sendhil and Spiess, Jann},
@@ -144,4 +158,13 @@ note = "[online; accessed 23-August-2022]"
 	pages = {423--429},
 	doi = {10.1007/978-3-030-70179-6_56},
 	url = {http://dx.doi.org/10.1007/978-3-030-70179-6_56}
+}
+
+@misc{rowe2022,
+	title = {Sensing Population Displacement from Ukraine Using Facebook Data: Potential Impacts and Settlement Areas},
+	author = {Rowe, Francisco and Neville, Ruth and {González-Leonardo}, Miguel},
+	year = {2022},
+	month = {08},
+	date = {2022-08-30},
+	url = {http://dx.doi.org/10.31219/osf.io/7n6wm}
 }
