--- a/manuscript/template.tex
+++ b/manuscript/template.tex
@@ -49,15 +49,15 @@
 % configure pdf metadata and link handling
 \hypersetup{
 	pdfauthor={Francisco Rowe},
-	pdftitle={Using Digital Footprint Data to Monitor Human Mobility For Supporting Rapid Humanitarian Responses},
-	pdfsubject={Using Digital Footprint Data to Monitor Human Mobility For Supporting Rapid Humanitarian Responses},
+	pdftitle={Using Digital Trace Data to Monitor Human Mobility and Support Rapid Humanitarian Responses},
+	pdfsubject={Using Digital Trace Data to Monitor Human Mobility and Support Rapid Humanitarian Responses},
 	pdfkeywords={Digital footprint data, Human mobility, Population displacement, Flooding, Pakistan, Geographic data science},
 	pdffitwindow=true,
 	breaklinks=true,
 	colorlinks=false,
 	pdfborder={0 0 0}}
 
-\title{Using Digital Footprint Data to Monitor Human Mobility For Supporting Rapid Humanitarian Responses\footnote{\textbf{Citation}: Rowe, F., 2022. Using Digital Footprint Data to Monitor Human Mobility For Supporting Rapid Humanitarian Responses}}
+\title{Using Digital Trace Data to Monitor Human Mobility and Support Rapid Humanitarian Responses\footnote{\textbf{Citation}: Rowe, F., 2022. Using Digital Trace Data to Monitor Human Mobility and Support Rapid Humanitarian Responses}}
 \author[1]{Francisco Rowe \thanks{\textit{Corresponding author}: F.Rowe-Gonzalez@liverpool.ac.uk}}
 \affil[1]{Geographic Data Science Lab, Department of Geography and Planning, University of Liverpool, Liverpool, United Kingdom}
 
@@ -110,7 +110,12 @@ $endif$
 
 \begin{abstract}
 
-Text for abstract
+Global warming is increasing the frequency of extreme weather events leading to an increased risk of large-scale population displacements. 
+Since June 2022, Pakistan has recorded destructive flash flooding resulting from melting glaciers and torrential monsoon rainfall. 
+Emergency responses have documented flood-related deaths, injuries and infrastructure, less is known about population displacements resulting from recent floods. 
+Information on these populations and mobility is critical to ensure the appropriate delivery of humanitarian assistance where it is most needed.
+Lack of granular spatial data in real time have been a key barrier.
+This article uses digital footprint data from Meta-Facebook to identify the patterns of population displacement in Pakistan in near real time.
 
 
 %\vspace{1cm}
