final submission to rsrs

--- a/manuscript/template.tex
+++ b/manuscript/template.tex
@@ -58,7 +58,7 @@
 	pdfborder={0 0 0}}
 
 \title{Using Digital Trace Data to Monitor Human Mobility and Support Rapid Humanitarian Responses\footnote{\textbf{Citation}: Rowe, F., 2022. Using Digital Trace Data to Monitor Human Mobility and Support Rapid Humanitarian Responses}}
-\author[1]{Francisco Rowe \thanks{\textit{Corresponding author}: F.Rowe-Gonzalez@liverpool.ac.uk}}
+\author[1]{Francisco Rowe \thanks{\textit{Corresponding author}: F.Rowe-Gonzalez@lliverpool.ac.uk}}
 \affil[1]{Geographic Data Science Lab, Department of Geography and Planning, University of Liverpool, Liverpool, United Kingdom}
 
 \date{}
