--- a/manuscript/template.tex
+++ b/manuscript/template.tex
@@ -121,6 +121,7 @@ This article uses digital footprint data from Meta-Facebook to identify the patt
 %\vspace{1cm}
 \end{abstract}
 
+\textit{Keywords}: Digital footprint data, Human mobility, Population displacement, Flooding, Pakistan, Geographic data science.
 
 
 \pagebreak
